# evalue-ripr

./: README.md  pyproject.toml
evalue_ripr/: __init__.py  constants.py  evalues.py  proba_tools.py
examples/: RIPr_antisquare.py  RIPr_antisquare_point.py  RIPr_antisquare_prior.py  RIPr_square.py  RIPr_square_point.py
