[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "evalue-ripr"
version = "0.1.0"
description = "e-values and reverse information projection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy>=1.6",
]

[tool.setuptools.packages.find]
exclude = ["examples"] 
